--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.17.1",
     "http-errors": "^2.0.0",
     "joi": "^17.9.1",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "1.10.0"
