--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
-  ]
+  "buildCommand": "yarn start",
+  "devCommand": "yarn start:dev"
 }
