--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
-  "buildCommand": "yarn start",
-  "devCommand": "yarn start:dev"
+  "version": 2,
+  "name": "node-server",
+  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
 }
